[project]
name = "model-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "urllib3>=2.4.0",
]
